44 feat(api): add JPMS module descriptors