@@ -44,15 +44,27 @@
             <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.code=media.barney.contract.core</arg>
+            <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.api=media.barney.contract.core</arg>
             <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.parser=media.barney.contract.core</arg>
+            <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=media.barney.contract.core</arg>
             <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.tree=media.barney.contract.core</arg>
+            <arg>--add-exports</arg>
             <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>--add-exports</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.util=media.barney.contract.core</arg>
           </compilerArgs>
         </configuration>
       </plugin>
